# wisco-slap

./: README.md  dead_archive.py  evdet.md  pyproject.toml  pytest.ini  recover_sync_hdf5.py  synaptic_video_example.py  test.py  test_conventions.md
FIGS/DETECTION/: detect_avior.ipynb  detect_events.ipynb
FIGS/exp_overview_schematics/: data_process_fix.ipynb
FIGS/glutamate_event_detection/: detection_instructions.md  ged.py  glut_detection.ipynb  sort.ipynb
apps/: config_sleepscore.py  view_mean_ims.py
apps/source_selector/: selected_source_ids.txt  source_dashboard.py  source_selector_gui.py  webagg_selector.py
apps/source_selector/in_dev_plotly/: launch_selector_webagg.py  source_dashboard_plotly.py  source_viewer_and_selector.ipynb
scripts/: cleanup_analysis_materials.py  patch_glu_event_clocks.py
src/wisco_slap/: __init__.py  anat.py  defs.py  sync.py  temp.md  utils.py
src/wisco_slap/core/: ScopeX_class.py  __init__.py
src/wisco_slap/get/: __init__.py  _annotations.py  _get_event_detection.py  _get_hypnos.py  _get_scopex.py  _get_syn_info.py  _get_sync_block_dat.py  _utils.py
src/wisco_slap/meta/: README.md  __init__.py  _update.py  dmd_info.py  epoch.py  exsum_mirror.py  get.py  prepro_info.py  status.py  sync.py
src/wisco_slap/peri/: __init__.py  anno.py  ephys.py  sync.py  vid.py  vig.py
src/wisco_slap/peri/pupil_inference/: pupil_inference_main.py
src/wisco_slap/pipes/: __init__.py  _auto_slapscore_model_code.py  annotation_materials.py  bayglutev.py  exp_info.py  ref_images.py  score_mi.py  slap.py  sleepscore.py  syn_id.py  synmovies.py  trace_gen.py  traces.py  videos.py
src/wisco_slap/pipes/autoscore_model/: train_model.ipynb
src/wisco_slap/pipes/deprecated/: traces.py  traces_pipeline.py  traces_v3.py
src/wisco_slap/pipes/notebooks/: COMPLETE_ANALYSIS_PIPELINE.ipynb  data_generation_manipulation.ipynb
src/wisco_slap/pipes/pupil_inference/: pupil_inference_main.py  run_pup_inf.py
src/wisco_slap/pns/: README.md  __init__.py  annotation_mat_mon.py  annotation_materials.py  glu_ev_basic_gen.py  glu_ev_basic_mon.py  scopex_gen.py  scopex_mon.py  score_mi.py  sync_block_dat.py  sync_block_mon.py  synmovies.py
src/wisco_slap/pns/autoscore_model/: _auto_slapscore_model_code.py  train_model.ipynb
src/wisco_slap/pns/failed_event_detections/: codex_review_findings_temp.md  glut_ev_defs.py  glut_ev_gen.py  glut_ev_mon.py
src/wisco_slap/pns/in_dev/: bayglutev_old.py  old_sleepscore_functions.py
src/wisco_slap/pns/notebooks/: COMPLETE_ANALYSIS_PIPELINE.ipynb  data_generation_manipulation.ipynb  ephys_sync_issue.ipynb
src/wisco_slap/pns/pupil_inference/: pupil_inference_main.py  run_pup_inf.py  temp.ipynb
src/wisco_slap/pns/sleepscore/: __init__.py  _config.py  _data.py  _evaluate.py  _features.py  _hsmm.py  _model.py  _utils.py  find_training_hypnos.ipynb  instructions.md  score_all.py
src/wisco_slap/scope/: DF_Classes.py  __init__.py  _events_refined.py  _syn_sorting_utils.py  act.py  anat.py  hfio.py  io.py  pro.py  roinfo.py  somas.py  syn_topo.py  synfo.py  viz.py
src/wisco_slap/scope/corr/: __init__.py  aggregate.py  bouts.py  core.py  ensemble.py  lagged.py  outliers.py  plot.py  state_compare.py  stats.py  temporal.py  time_evolution.py
src/wisco_slap/scope/deprecated/: act.py  old_topo_ordering.py
src/wisco_slap/scope/to_deprecate/: io.py  somas.py  syn_topo.py
src/wisco_slap/util/: __init__.py  checks.py  gen.py  info.py  io.py  plot.py  snr.py  video.py
src/wisco_slap/util/plot_styles/: fully_stripped.mplstyle
src/wisco_slap/util/validity/: __init__.py  events.py  hypno.py  mask.py
src/wisco_slap/viz/: __init__.py  colors.py  synapto_overlays.py  tiff_movies.py
src/wisco_slap/viz/synapto_anim/: __init__.py  __main__.py  config.py  editor.py  render.py
tests/: test_corr_temporal.py  test_event_dendrite_tree_plot.py  test_matched_filter.py  test_meta_get.py  test_meta_status.py  test_roi_dff.py  test_sleepscore.py  test_validity.py
