[project]
name = "wisco-slap"
version = "0.1.0"
description = "Analysis functions for working with SLAP2 data at the University of Wisconsin - Madison"
readme = "README.md"
authors = [
    { name = "Kort Driessen", email = "driessenkort@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "black>=25.1.0",
    "ruff>=0.13.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
    "slap2-py",
    "electro-py",
    "tqdm>=4.67.1",
    "rich>=14.1.0",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "streamlit>=1.50.0",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
slap2-py = { path = "../slap2-py", editable = true }
electro-py = { path = "../electro-py", editable = true }

# Build one wheel that contains both import packages.
[tool.hatch.build.targets.wheel]
packages = [
  "src/wisco_slap",
]

# (Optional but nice for source distributions)
[tool.hatch.build.targets.sdist]
include = [
  "src/wisco_slap/**",
  "README.md",
  "pyproject.toml",
]

# -------------------------------- FORMATTING AND LINTING -------------------------------

[tool.black]
# Accept all Black defaults (88 col, etc.); line-length shown for clarity only.
line-length = 88
target-version = ["py312"]  # adjust to your project min version, e.g., "py310"

[tool.ruff]
line-length = 88
target-version = "py312"
unsafe-fixes = true
preview = true

[tool.ruff.lint]
# Sensible, low-noise rule set; add more later as you like.
select = ["E", "F", "I", "B", "UP"]  # pycodestyle, pyflakes, isort, bugbear, pyupgrade

[tool.ruff.lint.isort]
# Let Ruff handle import ordering; set your package name(s) here:
known-first-party = ["package_name"]
