[project]
name = "wisco-slap"
version = "0.1.0"
description = "Analysis functions for working with SLAP2 data at the University of Wisconsin - Madison"
readme = "README.md"
authors = [
    { name = "Kort Driessen", email = "driessenkort@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "slap2-py",
    "electro-py",
    "tqdm>=4.67.1",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "scikit-image>=0.25.2",
    "av>=16.0.1",
    "pymatreader>=1.1.0",
    "h5py>=3.14.0",
    "hdf5storage>=0.2.2",
    "mat73>=0.65",
    "cvxpy>=1.7.3",
    "streamlit>=1.50.0",
]

# Dev-only deps: tools + notebooks.
# uv supports groups; install with: uv sync --group dev
[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "ty>=0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
slap2-py = { path = "../slap2-py", editable = true }
electro-py = { path = "../electro-py", editable = true }

# Build one wheel that contains the import package.
[tool.hatch.build.targets.wheel]
packages = [
  "src/wisco_slap",
]

# (Optional but nice for source distributions)
[tool.hatch.build.targets.sdist]
include = [
  "src/wisco_slap/**",
  "README.md",
  "pyproject.toml",
]

# ------------------------------ RUFF (lint + format) ------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

# If you want Ruff to run both linting and formatting in "modern" mode:
# (preview is optional; keep it off if you want fewer surprises)
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# You can add more later (e.g. "N", "SIM", "C4", "RUF", etc.)

[tool.ruff.lint.isort]
known-first-party = ["wisco_slap"]

[tool.ruff.format]
# Ruff formatter is the Black replacement (no Black config needed).
# Keep default behavior unless you have a reason to tweak.
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ------------------------------ TY (type checker + LSP) ------------------------------
[tool.ty]
# You can keep this section minimal; ty will auto-discover a lot.
# Add rules as you start enforcing things.

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
# Optional: helpful to be explicit in src-layout repos.
root = ["./src"]

# Example: ignore (or warn/error) specific rules if needed:
# [tool.ty.rules]
# possibly-unresolved-reference = "warn"